# PREDICTION

crypto-trend-pipeline/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
crypto-trend-pipeline/dashboard/: app.py
crypto-trend-pipeline/flows/: pipeline_flow.py
crypto-trend-pipeline/scripts/: train.py
crypto-trend-pipeline/src/: config.py
crypto-trend-pipeline/src/api/: main.py
crypto-trend-pipeline/src/backtest/: engine.py
crypto-trend-pipeline/src/db/: database.py  models.py
crypto-trend-pipeline/src/extract/: binance_client.py
crypto-trend-pipeline/src/models/: trend_classifier.py
crypto-trend-pipeline/src/transform/: indicators.py
crypto-trend-pipeline/tests/: conftest.py  test_backtest.py  test_binance_client.py  test_indicators.py
