[project]
name = "crypto-trend-pipeline"
version = "0.1.0"
description = "End-to-end pipeline: extract crypto OHLCV data, engineer features, backtest and serve a simple trend classifier."
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31",
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "SQLAlchemy>=2.0",
    "psycopg2-binary>=2.9",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "streamlit>=1.33",
    "pydantic>=2.5",
    "tenacity>=8.2",
    "prefect>=2.16",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "mypy>=1.9",
    "ruff>=0.4",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
